[gd_scene load_steps=27 format=3 uid="uid://c223d84jnw2lw"]

[ext_resource type="Texture2D" uid="uid://cdpd806yu8ood" path="res://assets/backgrounds/quests.png" id="1_7r2xj"]
[ext_resource type="Script" uid="uid://cholpb2sv88kc" path="res://engine/scenes/quest_select/quest_select.gd" id="1_46gki"]
[ext_resource type="Texture2D" uid="uid://05l8sgif4un2" path="res://assets/backgrounds/quests_fg.png" id="2_5ggq1"]
[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://assets/fonts/lady_radical.ttf" id="3_y3u8k"]
[ext_resource type="PackedScene" uid="uid://cs4xjk311kxho" path="res://engine/scenes/quest_select/quests_overview.tscn" id="4_6l8m7"]
[ext_resource type="Shader" uid="uid://50cnnobypta" path="res://engine/scenes/quest_select/background_line.gdshader" id="5_nkaui"]
[ext_resource type="Texture2D" uid="uid://mds6jllxer0h" path="res://assets/sprites/icons.png" id="7_2rtrq"]
[ext_resource type="Script" uid="uid://fhgkw1iml6g3" path="res://engine/resources/utility_node/tooltip_grabber.gd" id="8_ce8b2"]
[ext_resource type="Script" uid="uid://bp8kqfn8liwqp" path="res://engine/resources/utility_node/fade_button.gd" id="8_uuxxj"]
[ext_resource type="PackedScene" uid="uid://di6wvg6vsnpk6" path="res://engine/scenes/quest_select/quest_select_statbar.tscn" id="12_0mlav"]
[ext_resource type="PackedScene" uid="uid://ckftsugq2vfat" path="res://engine/scenes/quest_select/edit_equipment.tscn" id="15_e1val"]
[ext_resource type="Texture2D" uid="uid://co7maglvq1akc" path="res://assets/sprites/finish_bg.png" id="20_002ai"]
[ext_resource type="Material" uid="uid://dk24wtqiv26r5" path="res://engine/resources/moving_bg.tres" id="20_g7kal"]
[ext_resource type="Texture2D" uid="uid://cokabceyaajw6" path="res://assets/sprites/begin_fg.png" id="22_3ssya"]
[ext_resource type="Texture2D" uid="uid://cb841dg7jgt5x" path="res://assets/sprites/begin_fg_pressed.png" id="23_1rhh3"]
[ext_resource type="Texture2D" uid="uid://bh4ddbqxe12na" path="res://assets/sprites/begin_fg_hover.png" id="23_05vpt"]

[sub_resource type="LabelSettings" id="LabelSettings_y818d"]
font = ExtResource("3_y3u8k")
font_color = Color(0.74902, 0.854902, 0.972549, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_thp31"]
shader = ExtResource("5_nkaui")

[sub_resource type="LabelSettings" id="LabelSettings_64wbd"]
font = ExtResource("3_y3u8k")
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oq5d8"]
line_spacing = 0.0
font_size = 8
outline_size = 3
outline_color = Color(0.0862745, 0.145098, 0.258824, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce8b2"]
atlas = ExtResource("7_2rtrq")
region = Rect2(22, 44, 12, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuxxj"]
atlas = ExtResource("7_2rtrq")
region = Rect2(34, 44, 12, 8)

[sub_resource type="Animation" id="Animation_2dwr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForegroundTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuestSelectStatbar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BeginButtonContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainContent:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackgroundTexture:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EditEquipment:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EditEquipment:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("EditEquipment:offset_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("EditEquipment:offset_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("EditEquipment:offset_left")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("EditEquipment:offset_top")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails/MarginContainer2/LoreLabel:z_index")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_mi1jm"]
resource_name = "equipment_edit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForegroundTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -180)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuestSelectStatbar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BeginButtonContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainContent:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackgroundTexture:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EditEquipment:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 180), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EditEquipment:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails/MarginContainer2/LoreLabel:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ck28q"]
resource_name = "equipment_edit_back"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundTexture:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainContent:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("QuestSelectStatbar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BeginButtonContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ForegroundTexture:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, -180), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EditEquipment:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 180)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails/MarginContainer2/LoreLabel:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f4j6h"]
_data = {
&"RESET": SubResource("Animation_2dwr6"),
&"equipment_edit": SubResource("Animation_mi1jm"),
&"equipment_edit_back": SubResource("Animation_ck28q")
}

[node name="QuestSelect" type="Control"]
layout_mode = 3
anchor_right = 0.25
anchor_bottom = 0.25
grow_horizontal = 2
scale = Vector2(4, 4)
script = ExtResource("1_46gki")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
size_flags_vertical = 0
texture = ExtResource("1_7r2xj")
stretch_mode = 2

[node name="MainContent" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MainContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainContent/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="MainContent/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Quests"
label_settings = SubResource("LabelSettings_y818d")

[node name="MarginContainer2" type="MarginContainer" parent="MainContent/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MainContent/MarginContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="QuestsOverview" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer" instance=ExtResource("4_6l8m7")]
layout_mode = 2

[node name="QuestDetails" type="VBoxContainer" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 7

[node name="MarginContainer" type="MarginContainer" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = -10

[node name="ColorRect" type="ColorRect" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails/MarginContainer/MarginContainer"]
material = SubResource("ShaderMaterial_thp31")
custom_minimum_size = Vector2(215, 8)
layout_mode = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="QuestNameLabel" type="Label" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Glory Days"
label_settings = SubResource("LabelSettings_64wbd")

[node name="MarginContainer2" type="MarginContainer" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="LoreLabel" type="Label" parent="MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestDetails/MarginContainer2"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Years have gone by in the flash of an eye. The glory days are long behind you. How exactly did your adventure end? What lay beyond the brink? It seems you've grown a bit fuzzy on the details. Regardless, there are more pressing matters to attend to - your quiet farm life has been interrupted by a strange new evil!"
label_settings = SubResource("LabelSettings_oq5d8")
autowrap_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="MainContent/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6

[node name="BackButton" type="MarginContainer" parent="MainContent/MarginContainer/MarginContainer3"]
layout_mode = 2
script = ExtResource("8_uuxxj")
shortcut_action = &"back"
texture_normal = SubResource("AtlasTexture_ce8b2")
texture_hover = SubResource("AtlasTexture_uuxxj")
metadata/_custom_type_script = "uid://bp8kqfn8liwqp"

[node name="TooltipGrabber" type="Node" parent="MainContent/MarginContainer/MarginContainer3/BackButton"]
script = ExtResource("8_ce8b2")
text = "scene-return.main"
context_mode = 0
metadata/_custom_type_script = "uid://fhgkw1iml6g3"

[node name="MarginContainer2" type="MarginContainer" parent="MainContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="ForegroundTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 580.0
mouse_filter = 2
texture = ExtResource("2_5ggq1")
stretch_mode = 3

[node name="QuestSelectStatbar" parent="." instance=ExtResource("12_0mlav")]
layout_mode = 0
offset_top = 162.0
offset_right = 142.0
offset_bottom = 180.0

[node name="BeginButtonContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 251.0
offset_top = 161.0
offset_right = 320.0
offset_bottom = 180.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="BeginButtonContainer"]
layout_mode = 2
theme_override_constants/margin_right = 13
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="BeginButtonContainer/MarginContainer"]
texture_repeat = 2
material = ExtResource("20_g7kal")
layout_mode = 2
texture = ExtResource("20_002ai")

[node name="BeginButton" type="TextureButton" parent="BeginButtonContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("22_3ssya")
texture_pressed = ExtResource("23_1rhh3")
texture_hover = ExtResource("23_05vpt")
stretch_mode = 3

[node name="EditEquipment" parent="." instance=ExtResource("15_e1val")]
visible = false
layout_mode = 1
anchors_preset = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_f4j6h")
}

[connection signal="quest_selected" from="MainContent/MarginContainer/MarginContainer2/VBoxContainer/QuestsOverview" to="." method="_on_quests_overview_quest_selected"]
[connection signal="pressed" from="MainContent/MarginContainer/MarginContainer3/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="edit_equipment" from="QuestSelectStatbar" to="." method="_on_quest_select_statbar_edit_equipment"]
[connection signal="pressed" from="BeginButtonContainer/MarginContainer/BeginButton" to="." method="_on_begin_button_pressed"]
[connection signal="back_button_pressed" from="EditEquipment" to="." method="_on_edit_equipment_back_button_pressed"]
